# gh-utils

./: .gitignore  .pre-commit-config.yaml  README.md  USAGE.md  demo.py  gh-branch-manager.sh  pyproject.toml  test_tui.py
gh_branch_manager/: __init__.py  app.py  github_api.py
